<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/informacionItemRestaurante"
        android:title="@string/info"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/contactoItemRestaurante"
        android:title="@string/contacto"
        android:enabled="true"
        android:icon="@drawable/ic_contacto"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/especialidadItemRestaurante"
        android:title="@string/especialidad"
        android:enabled="true"
        android:icon="@drawable/ic_servicio"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/rutaItemRestaurante"
        android:title="@string/ruta"
        android:enabled="true"
        android:icon="@drawable/ic_gps"
        app:showAsAction="ifRoom"/>
</menu>