<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ycjn.centurhuila.Idioma">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativetoolbar"
        android:padding="5dp"
        android:background="@color/azul_medio"
        android:elevation="8dp">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_atras"
            android:background="@android:color/transparent"
            android:id="@+id/flecha"
            android:padding="8dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acerca"
            android:layout_toRightOf="@+id/flecha"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:id="@+id/tvtitulobaner"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/relativetoolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="CenturHuila"
           android:gravity="center"
           android:textStyle="bold"
           android:textSize="30sp"
           android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Versión 2.0"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proposito"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logosena"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calif"
            android:id="@+id/btncalificar"
            android:background="@color/azul_medio"
            android:textColor="@color/BlancoClaro"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/logoplay"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</RelativeLayout>
