<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorFondo2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ycjn.centurhuila.DescSitioNatural"
    tools:showIn="@layout/activity_desc_sitio_natural">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

           <!--aqui empieza linear de informacion-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/lininfo"
                android:visibility="visible">

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorFondo"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp">


                    <LinearLayout
                        android:id="@+id/lineardatossn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dbasic"
                            android:textColor="@color/colorTitulo"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvdatosbasicos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text=""
                            android:textColor="@color/colorTitulo"
                            android:textSize="16sp"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <!--aqui termina linear de informacion-->


            <!--aqui empieza linear de recomendaciones-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linrecomen"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorFondo"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp">


                    <LinearLayout
                        android:id="@+id/linearrecosn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rs"
                            android:textColor="@color/colorTitulo"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvrecomendaciones"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text=""
                            android:textColor="@color/colorTitulo"
                            android:textSize="16sp"/>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <!--aqui termina linear de recomendaciones-->


            <!--aqui empieza linear de ruta-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linruta"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorFondo"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp">


                    <LinearLayout
                        android:id="@+id/linearubisn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ubi"
                            android:textColor="@color/colorTitulo"
                            android:textSize="18sp"
                            android:textStyle="bold"/>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/dir"
                                android:textColor="@color/colorTitulo"
                                android:textSize="16sp"
                                android:id="@+id/diiiii"/>

                            <TextView
                                android:id="@+id/tvdireccion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:text=""
                                android:textColor="@color/colorTitulo"
                                android:textSize="16sp"
                                android:layout_toRightOf="@+id/diiiii"
                                android:layout_marginLeft="10dp"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/dep"
                                android:textColor="@color/colorTitulo"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:text="Huila"
                                android:textColor="@color/colorTitulo"
                                android:textSize="16sp"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/subr"
                                android:textColor="@color/colorTitulo"
                                android:textSize="16sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:text="  Centro"
                                android:textColor="@color/colorTitulo"
                                android:textSize="16sp"/>
                        </RelativeLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/cardView"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/colorFondo"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="4dp"
                    android:layout_marginTop="30dp">

                    <RelativeLayout
                        android:id="@+id/relaviasn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/tvter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vt"
                            android:textColor="@color/colorTitulo"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvviaterrestre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvter"
                            android:layout_marginLeft="12dp"
                            android:text=""
                            android:textColor="@color/colorTitulo"
                            android:textSize="16sp"/>


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
            <!--aqui termina linear de ruta-->



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</RelativeLayout>
